pousse-2 black panther

--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
 		<section>	
 		<nav>
 		<ul>
-			<li><a href="#acceil">ACCEIL</a> </li>
+			<li class="acceil"><a href="index.html">ACCEIL</a> </li>
 			<li class="wakanda-style"><a href="wakanda.html">WAKANDA</a> </li>
-			<li class="enigme-style"><a href="#">ENIGNE</a> </li>
+			<li class="enigme-style"><a href="enigme.html">ENIGNE</a> </li>
 		</ul>
 	   </nav>
 	   </section>
@@ -73,14 +73,16 @@
 				<img src="./assiets/image/acceil/pantherhome2.png" class="Pantherhome2">
 			</div>
 			<div><p><h2>KILLMONGER</h2>
-				<h4>La sauvegerie de N'Jadake alors qu'il serait dans une unité d'opération noires de l'armer Americaine lui a valu le surnom de Killomonger. D'origine Willimonger. D'origine Wakandaise, et se sentant abandoné par sa nation, il cherche à détourner T'Challa dans une quêteb vers le pouvoir.<br>voir plus>
+				<h4>La sauvegerie de N'Jadake alors qu'il serait dans une unité d'opération noires de l'armer Americaine lui a valu le surnom de Killomonger. D'origine Willimonger. D'origine Wakandaise, et se sentant abandoné par sa nation, il cherche à détourner T'Challa dans une quêteb vers le pouvoir.<br><a href="index.html">voir plus></a> 
 				</h4>
 			</p></div>
 
 			<div>
 				<img src="./assiets/image/acceil/pantherhome3.png" class="Pantherhome3">
 			</div>
-			<div><p><h2>Okoye</h2><h4>Okoye est le général des Dora Milaje (groupe d'élite de femmes guerrières) et le chef des forces armées et des renseignements wakandais. Témois du couronnement de T'Challa, elle se joint à lui dans de nombreuses aventures <br>voir plus></h4></p></div>
+			<div><p><h2>Okoye</h2><h4>Okoye est le général des Dora Milaje (groupe d'élite de femmes guerrières) et le chef des forces armées et des renseignements wakandais. Témois du couronnement de T'Challa, elle se joint à lui dans de nombreuses aventures <br>
+			<a href="wakanda.html">voir plus></a> 
+		    </h4></p></div>
 			<div>
 				<img src="./assiets/image/acceil/pantherhome4.png" class="Pantherhome4">
 			</div>	
