--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="UTF-8">
 	<title>black panther</title>
 	<link rel="stylesheet" type="text/css" href="./assiets/css/style.css">
 	<link rel="stylesheet" type="text/css" href="./assiets/css/acceil style.css">
@@ -220,7 +221,7 @@ Everett Ross et les membres de la Dora Milaje, les forces spéciales du Wakanda.
             </div>
             <div>
                 <h4>RETROUVEZ NOUS</h4>
-                <ul>
+                <ul class="reseaux">
                     <li><a href="http://www.marvel-cineverse.fr/pages/mcu/encyclopedie/personnages/black-panther.html"><img src="assiets/image/all pages/footer3.png" alt=""></a></li>
                     <li><a href="http://www.marvel-cineverse.fr/pages/mcu/encyclopedie/personnages/black-panther.html"><img src="assiets/image/all pages/footer4.png" alt=""></a></li>
                     <li><a href="http://www.marvel-cineverse.fr/pages/mcu/encyclopedie/personnages/black-panther.html"><img src="assiets/image/all pages/footer5.png" alt=""></a></li>
