--- a/wakanda.html
+++ b/wakanda.html
@@ -242,7 +242,7 @@
             </div>
             <div>
                 <h4>RETROUVEZ NOUS</h4>
-                <ul>
+                <ul class="reseaux">
                     <li><a href="http://www.marvel-cineverse.fr/pages/mcu/encyclopedie/personnages/black-panther.html"><img src="assiets/image/all pages/footer3.png" alt=""></a></li>
                     <li><a href="http://www.marvel-cineverse.fr/pages/mcu/encyclopedie/personnages/black-panther.html"><img src="assiets/image/all pages/footer4.png" alt=""></a></li>
                     <li><a href="http://www.marvel-cineverse.fr/pages/mcu/encyclopedie/personnages/black-panther.html"><img src="assiets/image/all pages/footer5.png" alt=""></a></li>
